--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "calculator",
+  "homepage": "https://alzca1.github.io/react-redux-calculator/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -32,5 +33,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
   }
 }
